--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -7,7 +7,12 @@
   text-align: center;
 }
 
+.content-container {
+  display: flex;
+}
+
 .settings-container {
+  width: 500px;
   display: flex;
   flex-direction: column;
 }
@@ -19,9 +24,11 @@
 
 .label-column {
   flex: 1;
-  min-width: 200px;
   display: flex;
   align-items: center;
+  justify-content: right;
+  padding-right: 20px;
+  min-width: 180px;
 }
 
 .slider-column {
