--- a/ui/src/styles/App.css
+++ b/ui/src/styles/App.css
@@ -60,7 +60,7 @@ header {
   flex: 1;
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: flex-end;
   padding-right: 20px;
   min-width: 180px;
 }
