--- a/ui/src/styles/App.css
+++ b/ui/src/styles/App.css
@@ -126,6 +126,15 @@ footer {
     background-repeat: no-repeat;
 }
 
+.rating-trend-down {
+    display: inline-block;
+    padding: 18px;
+    background: center center url(../images/arrow_down.png);
+    background-color: transparent;
+    object-fit: contain;
+    background-repeat: no-repeat;
+}
+
 .rating-table {
     border-collapse:separate;
     border:none;
