--- a/ui/src/styles/App.css
+++ b/ui/src/styles/App.css
@@ -158,10 +158,26 @@ footer {
 .portfolio-header {
   border-bottom: 1;
   font-size: 22px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .portfolio-content {
+  width: 100%;
   font-size: 10px;
+  text-align: center;
+}
+
+th {
+  font-size: 16px;
+}
+
+td {
+  padding: 5px;
+}
+
+td:nth-child(1) {
+  text-align: left;
 }
 
 tr:nth-child(odd) {
