--- a/ui/src/styles/App.css
+++ b/ui/src/styles/App.css
@@ -142,6 +142,12 @@ footer {
   margin-bottom: 30px;
 }
 
+.portfolio-rating h2 {
+  margin-top: 0;
+  color: black;
+  font-family: UBSHeadlineWebFont, UBSHeadline, Times New Roman, Times, serif;
+}
+
 .rating-value {
   padding-left: 15px;
   font-size: 104px;
