Add preferences icons

--- a/ui/src/styles/App.css
+++ b/ui/src/styles/App.css
@@ -77,6 +77,11 @@ footer {
   display: flex;
 }
 
+.row img {
+  width: 40px !important;
+  height: 40px !important;
+}
+
 .label-column {
   flex: none;
   display: flex;
