--- a/ui/src/styles/App.css
+++ b/ui/src/styles/App.css
@@ -200,3 +200,15 @@ tr:nth-child(even) {
   background-color: #f9f9f9;
   color: #000;
 }
+
+.remove-button {
+  width: 20px;
+  height: 20px;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+.remove-button svg {
+  width: 20px;
+  height: 20px;
+}
