--- a/ui/src/styles/App.css
+++ b/ui/src/styles/App.css
@@ -210,3 +210,12 @@ tr:nth-child(even) {
   width: 14px;
   height: 14px;
 }
+
+.exclusions {
+  margin-top: 50px;
+}
+
+.exclusions img {
+  width: 50px;
+  height: 50px;
+}
